--- a/cookie_window/cookie.css
+++ b/cookie_window/cookie.css
@@ -121,12 +121,14 @@ main{
     margin-top: 10px;
     padding: 8px 16px;
     display: flex;
-    justify-content: center;
+    align-content: center;
+    
 }
 
 .modal-btn{
     padding: 10px 24px;
     cursor: pointer;
+    
 }
 
 /* modal input */
