complete cookie consent development

--- a/cookie_window/cookie.css
+++ b/cookie_window/cookie.css
@@ -125,6 +125,10 @@ main{
     
 }
 
+.modal-choice-btns-reverse{
+    flex-direction: row-reverse;
+}
+
 .modal-btn{
     padding: 10px 24px;
     cursor: pointer;
